src/test/resources/de/cd4analysis/cocos/mcg/invalid/CD4AC2005.cd
package de.cd4analysis.cocos;

classdiagram CD4AC2005 {
  abstract enum A;
  derived enum B;
  / enum C;
  final enum D;
  private enum E;
  protected enum F;
  static enum G;
}
